# timelapse

./: CMakeLists.txt  kodi.json  main.cpp
inc/: Logger.h
src/: Logger.cpp
